--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -1,65 +1,80 @@
-/* Resets */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+body {
+  background: #333;
+  color: #FFF;
 }
-
-/* Mobile first */
-.wrapper {
-  min-height: 100vh;
-  min-width: calc(100vw - (100vw - 100%));
-  background-color: #fec631;
+.container {
+  width: 50%;
+  margin: 3em auto;
+  padding: 2em;
 }
-
-.headline {
-  padding-top: 100px;
-  font-size: 2.5em;
+header {
+  margin-bottom: 30px;
+}
+header h1 {
+  font-size: 2em;
   text-align: center;
-  color: #000;
   text-transform: uppercase;
 }
-
-form {
-  max-width: 80%;
-  margin: 50px auto;
+section {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 
-#search {
-  width: 65%;
-  margin: 0;
+#weightType{
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+select, input {
+  width: 250px;
+  outline: none;
+  border: 0;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  text-indent: 10px;
+}
+option {
+  text-indent: 10px;
+}
+#input {
+  margin-bottom: 20px;
+}
+#output {
+  width: 70%;
+}
+.card {
+  margin-bottom: 10px;
   padding: 20px;
-  outline: 0;
-  border: 0;
-  font-size: 1.1em;
+  text-transform: uppercase;
+  border-radius: 10px;
+  overflow: auto;
+}
+.card h3 {
+  font-size: 1.6em;
+  float: left;
+}
+.card h4 {
+  font-size: 1.5em;
+  color: #FFF !important;
+  float: right;
 }
 
-#submit-btn {
-  width: 35%;
-  background-color: #f7f7f7;
-  border: 0;
-  outline: 0;
-  font-size: 1.1em;
+.kilos {
+  color: #FF9900;
+  border: 3px solid #FF9900;
 }
-
-#submit-btn:hover {
-  cursor: pointer;
-  background-color: #000;
-  color: #fff;
+.pounds {
+  color: #FF0077;
+  border: 3px solid #FF0077;
 }
-
-/* Tablet */
-@media screen and (min-width: 768px) {
-  .headline {
-    font-size: 3.5em;
-  }
-
-  #search,
-  #submit-btn {
-    font-size: 2em;
-  }
+.grams {
+  color: #14BAFC;
+  border: 3px solid #14BAFC;
+}
+.ounces {
+  color: #2CCA31;
+  border: 3px solid #2CCA31;
 }
