--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f1f1f1;
+  background-color: lightgray;
 }
 
 .btn {
