--- a/Task 4/style.css
+++ b/Task 4/style.css
@@ -21,9 +21,52 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: lightslategray;
 }
 
 .container h1 {
   margin-top: 50px;
-  color: #333;
+  color: black;
+}
+
+#output {
+  margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  color: black;
+}
+#output > div {
+  text-align: center;
+  width: 500px;
+  min-height: 500px;
+  border: 2px solid black;
+  border-radius: 10px;
+  background: rgb(131,58,180);
+  background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(159,254,255,1) 50%);
+}
+
+#output > div > div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  padding: 10px;
+
+}
+
+#output span {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 5px 15px;
+}
+
+#output h1 {
+  color: black;
+  margin: 15px 0;
+}
+
+#output h3 {
+  border-bottom: solid black 2px;
 }
